tests/expectations/compiler/const_generics/const_generic_structs_fail.out
Error [ETYC0372005]: Unknown struct or record `test.aleo::Foo`
    --> compiler-test:7:17
     |
   7 |         let f = Foo::[x] { y: 0 };
     |                 ^^^
